[package]
name = "pbipaste"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pbi"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
base64 = "0.22"
image = "0.25.1"
libc = "0.2.155"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
